--- a/assets/reset.css
+++ b/assets/reset.css
@@ -14,6 +14,8 @@
   body {
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
+    height: 100%;
+    margin: 0;
   }
   
   img, picture, video, canvas, svg {
