--- a/assets/style.css
+++ b/assets/style.css
@@ -4,13 +4,9 @@
   height: 100vh;
 }
 
-#left-side,
-#right-side {
-  width: 50%;
-}
-
 /* LEFT SIDE  */
 #left-side {
+  width: 40%;
   background-image: url("/assets/images/bg-image.jpg");
   background-size: cover;
   display: flex;
@@ -20,17 +16,18 @@
 }
 
 #logo-banner {
-  background-color: rgba(0, 0, 0, 0.5); /* Black with 50% transparency */
+  background-color: rgba(0, 0, 0, 0.4); /* Black with 50% transparency */
   width: 100%; /* Full width of the parent container */
   padding: 1%;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 13%;
+  height: 17%;
   overflow: hidden;
 }
 
 #logo-img {
+  background-color: rgba(78, 123, 65, 0.4);
   height: 100%; /* Make the image height equal to the height of the banner */
   object-fit: contain; /* Ensures the image keeps its aspect ratio */
   max-width: 100%;
@@ -44,10 +41,63 @@
 }
 
 /* RIGHT SIDE */
+
 #right-side {
-  background-color: rgb(210, 255, 207);
+  width: 60%;
+  background-color: rgb(212, 248, 220);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
+
+#paragraphs {
+  padding: 15% 20% 5% 5%;
+  font-family: "Roboto", system-ui;
+  font-size: 2.5vh;
+  line-height: 1.2;
+  font-weight: 700;
+}
+
+.intro {
+  margin: 3% 0%;
+}
+
+form {
+  background-color: white;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+  padding: 3% 0 8% 5%;
+}
+
+#form-title {
+  font-family: "Roboto", system-ui;
+  font-size: 3vh;
+  font-weight: 700;
+}
+
+#form-structure {
+  font-family: "Roboto", system-ui;
+  font-weight: 700;
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  color: rgb(110, 110, 110)
+}
+
+.form-row {
+  display: flex;
+  flex-direction: row;
+  padding-top: 2%;
+}
+
+.form-input {
+  padding-right: 5%;
+}
+
+.form-input > input{
+    width: 13vw;
+    height: 3.4vh;
+    border: 2px solid darkgray; 
+    border-radius: 5px; 
+    outline: none; 
+    transition: all 0.3s ease-in-out; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
