--- a/assets/style.css
+++ b/assets/style.css
@@ -50,7 +50,7 @@
 }
 
 #paragraphs {
-  padding: 15% 20% 5% 5%;
+  padding: 10% 20% 3% 5%;
   font-family: "Roboto", system-ui;
   font-size: 2.5vh;
   line-height: 1.2;
@@ -64,17 +64,15 @@
 form {
   background-color: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-  padding: 3% 0 8% 5%;
+  padding: 3% 0 3% 5%;
 }
 
 #form-title {
-  font-family: "Roboto", system-ui;
-  font-size: 3vh;
+  font-size: 2.5vh;
   font-weight: 700;
 }
 
 #form-structure {
-  font-family: "Roboto", system-ui;
   font-weight: 700;
   font-size: 12px;
   display: flex;
@@ -100,4 +98,39 @@ form {
     outline: none; 
     transition: all 0.3s ease-in-out; 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .form-input > input:focus {
+    border: 2px solid blue;
+    outline: none; /* Removes default focus outline */
+}
+
+.form-input > input:invalid {
+    border: 2px solid red;
+}
+
+
+  button{
+    margin: 3% 0 3% 5%;
+    width:20%;
+    height:5%;
+    background-color: rgb(61, 94, 64);
+    color:white;
+    font-weight: bold;
+    border-radius: 5px; 
+    border: none;
+    transition: all 0.3s ease-in-out; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  }
+
+  #login{
+    margin: 0% 5%;
+    width:30%;
+    font-size: 90%;
+    font-weight: 700;
+    color: rgb(53, 52, 52)
+  }
+
+  #login > span{
+    color:rgb(61, 94, 64);
   }
